correct signup arrow position firefox - mobile/desktop footer

--- a/src/components/Footer-style.scss
+++ b/src/components/Footer-style.scss
@@ -149,50 +149,9 @@
         }
       }
     }
-    .signup-arrow {
-      margin-top: 11px;
-      margin-left: -65px;
-      position: absolute;
-      width: 60%;
-    }
-    @supports (-ms-ime-align: auto) {
-      .signup-arrow {
-        margin-top: 18px;
-        margin-left: -125px;
-        position: absolute;
-        width: 60%;
-      }
-    }
     @-moz-document url-prefix() {
       .signup-arrow {
-        margin-top: 25px;
-        margin-left: -130px;
-      }
-    }
-    .mobile-arrow {
-      z-index: 0;
-      margin-top: 15px;
-      margin-left: -45px;
-      position: absolute;
-      width: 90%;
-    }
-    @-moz-document url-prefix() {
-      .mobile-arrow {
-        margin-top: 35px;
-        margin-left: -110px;
-      }
-    }
-    @media (max-width: 375px) {
-      .mobile-arrow {
-        z-index: 0;
-        margin-top: 16px;
-        margin-left: -45px;
-      }
-      @-moz-document url-prefix() {
-        .mobile-arrow {
-          margin-top: 35px;
-          margin-left: -95px;
-        }
+        padding-top: 24px;
       }
     }
   }
